--- a/images/credo.html
+++ b/images/credo.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "credo.css"], "outOfDate":[]};
 </script>
   
-  <title>Home</title>
+  <title>Credo</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4085801442"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-musters.css?crc=4212161751"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=362591451" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/credo.css?crc=179927205" id="pagesheet"/>
     <!--HTML Widget code-->
   
 <style>
@@ -60,15 +60,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu3692"><!-- group -->
-    <div class="clip_frame grpelem" id="u3692"><!-- svg -->
-     <img class="svg" id="u3690" src="images/svg-1645641x475.svg?crc=367519998" alt="" data-mu-svgfallback="images/svg%201645641x475_poster_.png?crc=490799127" data-heightwidthratio="0.28933092224231466" data-image-width="553" data-image-height="160"/>
+   <img class="grpelem" id="u3200-9" alt="5 Ingredients are the fundamental structure auf FranziskART. Most important is Love and Compassion for Design, to develop a Strategy that works. The Idea is to Communicate Diversity throughout the World In a beautiful way. " src="images/u3200-9.png?crc=4126122995" data-image-width="359"/><!-- rasterized frame -->
+   <div class="clearfix grpelem" id="ppu3692"><!-- column -->
+    <div class="clearfix colelem" id="pu3692"><!-- group -->
+     <div class="clip_frame grpelem" id="u3692"><!-- svg -->
+      <img class="svg" id="u3690" src="images/svg-1645641x475.svg?crc=367519998" alt="" data-mu-svgfallback="images/svg%201645641x475_poster_.png?crc=490799127" data-heightwidthratio="0.28933092224231466" data-image-width="553" data-image-height="160"/>
+     </div>
+     <div class="grpelem" id="u3366"><!-- simple frame --></div>
     </div>
-    <div class="clip_frame grpelem" id="u3741"><!-- image -->
-     <img class="block" id="u3741_img" src="images/pinkwoods-crop-u3741.jpg?crc=466381756" alt="" data-heightwidthratio="0.39984289080911234" data-image-width="2546" data-image-height="1018"/>
+    <div class="clip_frame colelem" id="u3192"><!-- svg -->
+     <img class="svg" id="u3190" src="images/svg-5398183x3103.svg?crc=1954625" alt="" data-mu-svgfallback="images/svg%205398183x3103_poster_.png?crc=4088610462" data-heightwidthratio="0.575098814229249" data-image-width="1012" data-image-height="582"/>
     </div>
    </div>
-   <div class="size_fixed grpelem" id="u119" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
+   <div class="size_fixed grpelem" id="u3360" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
     
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 <nav class="menu">
@@ -79,12 +83,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <span class="hamburger hamburger-3"></span>
   </label>
   
-  <a href="http://127.0.0.1:33333/Preview/stevie_web3/credo.html" class="menu-item"> <i class="fa fa fa-heart"></i> </a>
-  <a href="http://192.168.0.17:33333/Preview/stevie_web3/illustration.html" class="menu-item"> <i class=" fa fa-hand-o-up  "></i> </a>
+  <a href="http://192.168.0.17:33333/Preview/stevie_web3/credo.html" class="menu-item"> <i class="fa fa fa-heart"></i> </a>
+  <a href="http://127.0.0.1:33333/Preview/stevie_web2/illustration.html" class="menu-item"> <i class=" fa fa-hand-o-up  "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/logo.html" class="menu-item"> <i class="fa fa-hand-peace-o  "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/movie.html" class="menu-item"> <i class="fa  fa-hand-spock-o "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/contact.html" class="menu-item"> <i class="fa fa-envelope"></i> </a>
-  <a href="http://127.0.0.1:33334/Preview/stevie_web/index.html" class="menu-item"> <i class=""></i> </a>
+  <a href="http://127.0.0.1:33334/Preview/stevie_web/index.html" class="menu-item"> <i class="fa fa-bed "></i> </a>
   
 </nav>
 
@@ -109,7 +113,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </svg>
 
    </div>
-   <div class="verticalspacer" data-offset-top="1018" data-content-above-spacer="1018" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="clearfix grpelem" id="pu3365"><!-- column -->
+    <div class="colelem" id="u3365"><!-- simple frame --></div>
+    <a class="nonblock nontext clip_frame colelem" id="u3409" href="contact.html"><!-- svg --><img class="svg" id="u3407" src="images/svg-671423x498.svg?crc=460146163" alt="" data-mu-svgfallback="images/svg%20671423x498_poster_.png?crc=44266882" data-heightwidthratio="0.7438692098092643" data-image-width="367" data-image-height="273"/></a>
+   </div>
+   <div class="verticalspacer" data-offset-top="1009" data-content-above-spacer="1009" data-content-below-spacer="70" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
