--- a/images/movie.html
+++ b/images/movie.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "movie.css"], "outOfDate":[]};
 </script>
   
-  <title>Home</title>
+  <title>Movie</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4085801442"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-musters.css?crc=4212161751"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=362591451" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/movie.css?crc=4170903946" id="pagesheet"/>
     <!--HTML Widget code-->
   
 <style>
@@ -60,15 +60,30 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu3692"><!-- group -->
-    <div class="clip_frame grpelem" id="u3692"><!-- svg -->
-     <img class="svg" id="u3690" src="images/svg-1645641x475.svg?crc=367519998" alt="" data-mu-svgfallback="images/svg%201645641x475_poster_.png?crc=490799127" data-heightwidthratio="0.28933092224231466" data-image-width="553" data-image-height="160"/>
+   <div class="grpelem" id="u3442"><!-- simple frame --></div>
+   <div class="clearfix grpelem" id="ppu3692"><!-- column -->
+    <div class="clearfix colelem" id="pu3692"><!-- group -->
+     <div class="clip_frame grpelem" id="u3692"><!-- svg -->
+      <img class="svg" id="u3690" src="images/svg-1645641x475.svg?crc=367519998" alt="" data-mu-svgfallback="images/svg%201645641x475_poster_.png?crc=490799127" data-heightwidthratio="0.28933092224231466" data-image-width="553" data-image-height="160"/>
+     </div>
+     <div class="clearfix grpelem" id="u3259"><!-- group -->
+      <div class="grpelem" id="u3261"><!-- simple frame --></div>
+     </div>
     </div>
-    <div class="clip_frame grpelem" id="u3741"><!-- image -->
-     <img class="block" id="u3741_img" src="images/pinkwoods-crop-u3741.jpg?crc=466381756" alt="" data-heightwidthratio="0.39984289080911234" data-image-width="2546" data-image-height="1018"/>
+    <div class="clearfix colelem" id="pu3231-14"><!-- group -->
+     <img class="grpelem" id="u3231-14" alt="Visuals Wie(n) verzaubert: Nach dem erfolgreichen Projektstart im 15. Bezirk, in der Reindorfgasse in 2015, zeigt das ehrenamtliche Projekt „Wiener StadtMärchenPfad“ auch 2016 mit einer zauberhaften Nutzung leerstehender Auslagen im Advent welches Potenzial auch der bestehende Bausubstanz im vierten Wiener Bezirk hat. " src="images/u3231-14.png?crc=4027396307" data-image-width="574"/><!-- rasterized frame -->
+     <a class="nonblock nontext clip_frame grpelem" id="u3400" href="contact.html"><!-- svg --><img class="svg" id="u3398" src="images/svg-575921x651.svg?crc=292937365" alt="" data-mu-svgfallback="images/svg%20575921x651_poster_.png?crc=3874291785" data-heightwidthratio="1.135036496350365" data-image-width="274" data-image-height="311"/></a>
+    </div>
+    <div class="clearfix colelem" id="u3296-14" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+     <p id="u3296">&nbsp;</p>
+     <p id="u3296-3">Homepage:</p>
+     <p id="u3296-6"><a class="nonblock" href="http://www.wienverzaubert.at/" target="_blank"><span id="u3296-4">http://www.wienverzaubert.at/</span></a></p>
+     <p id="u3296-7">&nbsp;</p>
+     <p id="u3296-9">Installation:</p>
+     <p id="u3296-12"><a class="nonblock" href="https://www.youtube.com/watch?v=yUCBa6CjfvQ" target="_blank"><span id="u3296-10">https://www.youtube.com/watch?v=yUCBa6CjfvQ</span></a></p>
     </div>
    </div>
-   <div class="size_fixed grpelem" id="u119" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
+   <div class="size_fixed grpelem" id="u3350" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
     
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 <nav class="menu">
@@ -80,11 +95,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </label>
   
   <a href="http://127.0.0.1:33333/Preview/stevie_web3/credo.html" class="menu-item"> <i class="fa fa fa-heart"></i> </a>
-  <a href="http://192.168.0.17:33333/Preview/stevie_web3/illustration.html" class="menu-item"> <i class=" fa fa-hand-o-up  "></i> </a>
+  <a href="http://127.0.0.1:33334/Preview/stevie_web/illustration.html" class="menu-item"> <i class=" fa fa-hand-o-up  "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/logo.html" class="menu-item"> <i class="fa fa-hand-peace-o  "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/movie.html" class="menu-item"> <i class="fa  fa-hand-spock-o "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/contact.html" class="menu-item"> <i class="fa fa-envelope"></i> </a>
-  <a href="http://127.0.0.1:33334/Preview/stevie_web/index.html" class="menu-item"> <i class=""></i> </a>
+  <a href="http://127.0.0.1:33334/Preview/stevie_web/index.html" class="menu-item"> <i class="fa fa-bed "></i> </a>
   
 </nav>
 
@@ -109,7 +124,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </svg>
 
    </div>
-   <div class="verticalspacer" data-offset-top="1018" data-content-above-spacer="1018" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="clearfix grpelem" id="u3257"><!-- group -->
+    <div class="clearfix grpelem" id="u3258"><!-- group -->
+     <div class="grpelem" id="u3260"><!-- simple frame --></div>
+    </div>
+   </div>
+   <div class="verticalspacer" data-offset-top="996" data-content-above-spacer="996" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="clearfix grpelem" id="u3299-3" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+    <p>&nbsp;</p>
+   </div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
