--- a/images/contact.html
+++ b/images/contact.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "webpro.js", "contact.css"], "outOfDate":[]};
 </script>
   
-  <title>Home</title>
+  <title>Contact</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4085801442"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-musters.css?crc=4212161751"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=362591451" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/contact.css?crc=428564829" id="pagesheet"/>
     <!--HTML Widget code-->
   
 <style>
@@ -60,15 +60,59 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu3692"><!-- group -->
-    <div class="clip_frame grpelem" id="u3692"><!-- svg -->
-     <img class="svg" id="u3690" src="images/svg-1645641x475.svg?crc=367519998" alt="" data-mu-svgfallback="images/svg%201645641x475_poster_.png?crc=490799127" data-heightwidthratio="0.28933092224231466" data-image-width="553" data-image-height="160"/>
-    </div>
-    <div class="clip_frame grpelem" id="u3741"><!-- image -->
-     <img class="block" id="u3741_img" src="images/pinkwoods-crop-u3741.jpg?crc=466381756" alt="" data-heightwidthratio="0.39984289080911234" data-image-width="2546" data-image-height="1018"/>
-    </div>
+   <div class="grpelem" id="u3445"><!-- simple frame --></div>
+   <div class="clip_frame grpelem" id="u3332"><!-- svg -->
+    <img class="svg" id="u3330" src="images/svg-4610194x2716.svg?crc=300728681" alt="" data-mu-svgfallback="images/svg%204610194x2716_poster_.png?crc=6327893" data-heightwidthratio="0.5902912621359223" data-image-width="515" data-image-height="304"/>
    </div>
-   <div class="size_fixed grpelem" id="u119" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
+   <div class="clearfix grpelem" id="ppu3692"><!-- column -->
+    <div class="clearfix colelem" id="pu3692"><!-- group -->
+     <div class="clip_frame grpelem" id="u3692"><!-- svg -->
+      <img class="svg" id="u3690" src="images/svg-1645641x475.svg?crc=367519998" alt="" data-mu-svgfallback="images/svg%201645641x475_poster_.png?crc=490799127" data-heightwidthratio="0.28933092224231466" data-image-width="553" data-image-height="160"/>
+     </div>
+     <div class="clearfix grpelem" id="u2791"><!-- group -->
+      <div class="grpelem" id="u2797"><!-- simple frame --></div>
+     </div>
+    </div>
+    <form class="form-grp clearfix colelem" id="widgetu225" method="post" enctype="multipart/form-data" action="scripts/form-u225.php"><!-- none box -->
+     <div class="clearfix grpelem" id="pwidgetu232"><!-- column -->
+      <div class="fld-grp clearfix colelem" id="widgetu232" data-required="true"><!-- none box -->
+       <div class="clearfix grpelem" id="ppu234"><!-- column -->
+        <label class="fld-label colelem" id="u234" for="widgetu232_input"><!-- state-based BG images --><img alt="Name:" src="images/blank.gif?crc=4208392903" style="display:block"/><div class="fluid_height_spacer"></div></label>
+        <span class="fld-input NoWrap actAsDiv clearfix colelem" id="u235-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><div id="u235-3"><input class="wrapped-input" type="text" spellcheck="false" id="widgetu232_input" name="custom_U232" tabindex="1"/><label class="wrapped-input fld-prompt" id="widgetu232_prompt" for="widgetu232_input"><span class="actAsPara">Namen eingeben</span></label></div></span>
+       </div>
+      </div>
+      <div class="fld-grp clearfix colelem" id="widgetu236" data-required="true" data-type="email"><!-- none box -->
+       <div class="clearfix grpelem" id="ppu239"><!-- column -->
+        <label class="fld-label colelem" id="u239" for="widgetu236_input"><!-- state-based BG images --><img alt="E-Mail:" src="images/blank.gif?crc=4208392903" style="display:block"/><div class="fluid_height_spacer"></div></label>
+        <span class="fld-input NoWrap actAsDiv clearfix colelem" id="u237-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><div id="u237-3"><input class="wrapped-input" type="email" spellcheck="false" id="widgetu236_input" name="Email" tabindex="2"/><label class="wrapped-input fld-prompt" id="widgetu236_prompt" for="widgetu236_input"><span class="actAsPara">E-Mail-Adresse eingeben</span></label></div></span>
+       </div>
+      </div>
+      <div class="fld-grp clearfix colelem" id="widgetu226" data-required="false"><!-- none box -->
+       <div class="clearfix grpelem" id="ppu228"><!-- column -->
+        <label class="fld-label colelem" id="u228" for="widgetu226_input"><!-- state-based BG images --><img alt="Nachricht:" src="images/blank.gif?crc=4208392903" style="display:block"/><div class="fluid_height_spacer"></div></label>
+        <span class="fld-textarea actAsDiv clearfix colelem" id="u229-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><div id="u229-3"><textarea class="wrapped-input" id="widgetu226_input" name="custom_U226" tabindex="3"></textarea><label class="wrapped-input fld-prompt" id="widgetu226_prompt" for="widgetu226_input"><span class="actAsPara">Nachricht eingeben</span></label></div></span>
+       </div>
+      </div>
+      <div class="clearfix colelem" id="pu240-4"><!-- group -->
+       <div class="clearfix grpelem" id="u240-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+        <p>Formular wird gesendet...</p>
+       </div>
+       <div class="clearfix grpelem" id="u230-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+        <p>Auf dem Server ist ein Fehler aufgetreten.</p>
+       </div>
+       <div class="clearfix grpelem" id="u241-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+        <p>Formular empfangen.</p>
+       </div>
+       <button class="submit-btn NoWrap rounded-corners clearfix grpelem" id="u231-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" type="submit" value="Senden" tabindex="4"><!-- content -->
+        <div style="margin-top:-12px;height:12px;">
+         <p>Senden</p>
+        </div>
+       </button>
+      </div>
+     </div>
+    </form>
+   </div>
+   <div class="size_fixed grpelem" id="u3345" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
     
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 <nav class="menu">
@@ -80,11 +124,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </label>
   
   <a href="http://127.0.0.1:33333/Preview/stevie_web3/credo.html" class="menu-item"> <i class="fa fa fa-heart"></i> </a>
-  <a href="http://192.168.0.17:33333/Preview/stevie_web3/illustration.html" class="menu-item"> <i class=" fa fa-hand-o-up  "></i> </a>
+  <a href="http://127.0.0.1:33333/Preview/stevie_web2/illustration.html" class="menu-item"> <i class=" fa fa-hand-o-up  "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/logo.html" class="menu-item"> <i class="fa fa-hand-peace-o  "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/movie.html" class="menu-item"> <i class="fa  fa-hand-spock-o "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/contact.html" class="menu-item"> <i class="fa fa-envelope"></i> </a>
-  <a href="http://127.0.0.1:33334/Preview/stevie_web/index.html" class="menu-item"> <i class=""></i> </a>
+  <a href="http://127.0.0.1:33334/Preview/stevie_web/index.html" class="menu-item"> <i class="fa fa-bed "></i> </a>
   
 </nav>
 
@@ -109,7 +153,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </svg>
 
    </div>
-   <div class="verticalspacer" data-offset-top="1018" data-content-above-spacer="1018" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="clearfix grpelem" id="u2784"><!-- group -->
+    <div class="clearfix grpelem" id="u2790"><!-- group -->
+     <div class="grpelem" id="u2796"><!-- simple frame --></div>
+    </div>
+   </div>
+   <div class="verticalspacer" data-offset-top="634" data-content-above-spacer="633" data-content-below-spacer="446" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="images/u234-ferr.png?crc=4035943178" alt=""/>
+   <img class="preload" src="images/u239-ferr.png?crc=4224357242" alt=""/>
+   <img class="preload" src="images/u228-ferr.png?crc=4167315836" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -129,11 +183,12 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Einige der Dateien auf dem Server fehlen oder sind ungültig. Löschen Sie den Browser-Cache und versuchen Sie es erneut. Wenn das Problem weiterhin besteht, wenden Sie sich an den Autor der Website.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","webpro","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
+Muse.Utils.initWidget('#widgetu225', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Form(elem, {validationEvent:'submit',errorStateSensitivity:'high',fieldWrapperClass:'fld-grp',formSubmittedClass:'frm-sub-st',formErrorClass:'frm-subm-err-st',formDeliveredClass:'frm-subm-ok-st',notEmptyClass:'non-empty-st',focusClass:'focus-st',invalidClass:'fld-err-st',requiredClass:'fld-err-st',ajaxSubmit:true}); });/* #widgetu225 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
