--- a/images/logo.html
+++ b/images/logo.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "logo.css"], "outOfDate":[]};
 </script>
   
-  <title>Home</title>
+  <title>Logo</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4085801442"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-musters.css?crc=4212161751"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=362591451" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/logo.css?crc=142784030" id="pagesheet"/>
     <!--HTML Widget code-->
   
 <style>
@@ -60,15 +60,106 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu3692"><!-- group -->
-    <div class="clip_frame grpelem" id="u3692"><!-- svg -->
-     <img class="svg" id="u3690" src="images/svg-1645641x475.svg?crc=367519998" alt="" data-mu-svgfallback="images/svg%201645641x475_poster_.png?crc=490799127" data-heightwidthratio="0.28933092224231466" data-image-width="553" data-image-height="160"/>
+   <div class="clearfix grpelem" id="ppu3692"><!-- column -->
+    <div class="clearfix colelem" id="pu3692"><!-- group -->
+     <div class="clip_frame grpelem" id="u3692"><!-- svg -->
+      <img class="svg" id="u3690" src="images/svg-1645641x475.svg?crc=367519998" alt="" data-mu-svgfallback="images/svg%201645641x475_poster_.png?crc=490799127" data-heightwidthratio="0.28933092224231466" data-image-width="553" data-image-height="160"/>
+     </div>
+     <div class="clearfix grpelem" id="u2781"><!-- group -->
+      <div class="grpelem" id="u3388"><!-- simple frame --></div>
+     </div>
     </div>
-    <div class="clip_frame grpelem" id="u3741"><!-- image -->
-     <img class="block" id="u3741_img" src="images/pinkwoods-crop-u3741.jpg?crc=466381756" alt="" data-heightwidthratio="0.39984289080911234" data-image-width="2546" data-image-height="1018"/>
+    <div class="clip_frame colelem" id="u2766"><!-- svg -->
+     <img class="svg" id="u2764" src="images/svg-256075x950.svg?crc=62471892" alt="" data-mu-svgfallback="images/svg%20256075x950_poster_.png?crc=3927641356" data-heightwidthratio="0.36875" data-image-width="160" data-image-height="59"/>
+    </div>
+    <div class="SlideShowWidget clearfix colelem" id="slideshowu1811" data-visibility="changed" style="visibility:hidden"><!-- none box -->
+     <div class="popup_anchor allow_click_through grpelem" data-col-pos="1" id="u1825popup">
+      <div class="SSSlideLinks clearfix" data-col-pos="1" id="u1825"><!-- horizontal-rows box -->
+       <div class="clearfix grpelem" id="pu1828"><!-- column -->
+        <div class="SSSlideLink clip_frame colelem" data-col-pos="0" id="u1828"><!-- image -->
+         <img class="block" data-col-pos="0" id="u1828_img" src="images/logo-farbe84x90.jpg?crc=3857412571" alt="" data-heightwidthratio="1.0843373493975903" data-image-width="83" data-image-height="90"/>
+        </div>
+        <div class="SSSlideLink clip_frame colelem" data-col-pos="1" id="u1826"><!-- image -->
+         <img class="block" data-col-pos="1" id="u1826_img" src="images/lebensmittelrettung92x90.jpg?crc=394703753" alt="" data-heightwidthratio="0.989010989010989" data-image-width="91" data-image-height="90"/>
+        </div>
+        <div class="SSSlideLink clip_frame colelem" data-col-pos="2" id="u1832"><!-- image -->
+         <img class="block" data-col-pos="2" id="u1832_img" src="images/b%c3%a4r89x90.jpg?crc=20676286" alt="" data-heightwidthratio="1.0227272727272727" data-image-width="88" data-image-height="90"/>
+        </div>
+        <div class="SSSlideLink clip_frame colelem" data-col-pos="3" id="u1830"><!-- svg -->
+         <img class="svg ImageInclude svg_mar" id="u1831" src="images/blank.gif?crc=4208392903" data-src="images/wildcats-with-handicaps_druck_cmyk.svg?crc=20098548" alt="" data-mu-svgfallback="images/wildcats%20with%20handicaps_druck_cmyk_poster_.png?crc=3898466762" data-heightwidthratio="1" data-image-width="90" data-image-height="90"/>
+        </div>
+       </div>
+       <div class="fluid_height_spacer"></div>
+      </div>
+     </div>
+     <div class="clearfix grpelem" id="ppu1834"><!-- column -->
+      <div class="clearfix colelem" id="pu1834"><!-- group -->
+       <div class="popup_anchor allow_click_through grpelem" data-col-pos="2" id="u1834popup">
+        <div class="SlideShowCaptionPanel clearfix" data-col-pos="2" id="u1834"><!-- stack box -->
+         <div class="SSSlideCaption clearfix grpelem" data-col-pos="0" id="u1836-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+          <div id="u1836-3">
+           <p>Internes Logo: Gleichbehandlungsanwaltschaft</p>
+          </div>
+         </div>
+         <div class="SSSlideCaption invi clearfix grpelem" data-col-pos="1" id="u1838-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+          <div id="u1838-3">
+           <p>Logo: Lebensmittelrettung Österreich</p>
+          </div>
+         </div>
+         <div class="SSSlideCaption invi clearfix grpelem" data-col-pos="2" id="u1835-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+          <div id="u1835-3">
+           <p>Logo: T-Shirt Design</p>
+          </div>
+         </div>
+         <div class="SSSlideCaption invi clearfix grpelem" data-col-pos="3" id="u1837-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+          <div id="u1837-3">
+           <p>Logo: Fußballverein</p>
+          </div>
+         </div>
+        </div>
+       </div>
+       <div class="popup_anchor allow_click_through grpelem" data-col-pos="7" id="u1841-4popup">
+        <div class="SSPreviousButton clearfix" data-col-pos="7" id="u1841-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+         <div id="u1841-3">
+          <p>&lt;</p>
+         </div>
+        </div>
+       </div>
+       <div class="popup_anchor allow_click_through grpelem" data-col-pos="6" id="u1840-4popup">
+        <div class="SlideShowLabel SSSlideCount clearfix" data-col-pos="6" id="u1840-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+         <div id="u1840-3">
+          <p><span id="u1840">4 - 4</span></p>
+         </div>
+        </div>
+       </div>
+       <div class="popup_anchor allow_click_through grpelem" data-col-pos="8" id="u1812-4popup">
+        <div class="SSNextButton clearfix" data-col-pos="8" id="u1812-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+         <div id="u1812-3">
+          <p>&gt;</p>
+         </div>
+        </div>
+       </div>
+      </div>
+      <div class="popup_anchor allow_click_through colelem" data-col-pos="0" id="u1813popup">
+       <div class="SlideShowContentPanel clearfix" data-col-pos="0" id="u1813" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- stack box -->
+        <div class="SSSlide clip_frame clearfix grpelem" data-col-pos="0" id="u1814" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image -->
+         <img class="ImageInclude position_content" data-col-pos="0" id="u1814_img" data-src="images/logo-farbe.jpg?crc=185488963" src="images/blank.gif?crc=4208392903" alt="" data-width="584" data-height="630"/>
+        </div>
+        <div class="SSSlide invi clip_frame grpelem" data-col-pos="1" id="u1816" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image -->
+         <img class="block ImageInclude" data-col-pos="1" id="u1816_img" data-src="images/lebensmittelrettung.jpg?crc=345490248" src="images/blank.gif?crc=4208392903" alt="" data-width="648" data-height="638"/>
+        </div>
+        <div class="SSSlide invi clip_frame grpelem" data-col-pos="2" id="u1820" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- image -->
+         <img class="block ImageInclude" data-col-pos="2" id="u1820_img" data-src="images/b%c3%a4r.jpg?crc=3822910782" src="images/blank.gif?crc=4208392903" alt="" data-width="557" data-height="567"/>
+        </div>
+        <div class="SSSlide invi clip_frame grpelem" data-col-pos="3" id="u1818" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- svg -->
+         <img class="svg ImageInclude" id="u1819" src="images/blank.gif?crc=4208392903" data-src="images/wildcats-with-handicaps_druck_cmyk.svg?crc=20098548" data-width="578" data-height="578" alt="" data-mu-svgfallback="images/wildcats%20with%20handicaps_druck_cmyk_poster_.png?crc=3898466762"/>
+        </div>
+       </div>
+      </div>
+     </div>
     </div>
    </div>
-   <div class="size_fixed grpelem" id="u119" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
+   <div class="size_fixed grpelem" id="u3389" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
     
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 <nav class="menu">
@@ -80,11 +171,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </label>
   
   <a href="http://127.0.0.1:33333/Preview/stevie_web3/credo.html" class="menu-item"> <i class="fa fa fa-heart"></i> </a>
-  <a href="http://192.168.0.17:33333/Preview/stevie_web3/illustration.html" class="menu-item"> <i class=" fa fa-hand-o-up  "></i> </a>
+  <a href="http://127.0.0.1:33333/Preview/stevie_web2/illustration.html" class="menu-item"> <i class=" fa fa-hand-o-up  "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/logo.html" class="menu-item"> <i class="fa fa-hand-peace-o  "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/movie.html" class="menu-item"> <i class="fa  fa-hand-spock-o "></i> </a>
   <a href="http://127.0.0.1:33334/Preview/stevie_web/contact.html" class="menu-item"> <i class="fa fa-envelope"></i> </a>
-  <a href="http://127.0.0.1:33334/Preview/stevie_web/index.html" class="menu-item"> <i class=""></i> </a>
+  <a href="http://127.0.0.1:33334/Preview/stevie_web/index.html" class="menu-item"> <i class="fa fa-bed "></i> </a>
   
 </nav>
 
@@ -109,7 +200,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </svg>
 
    </div>
-   <div class="verticalspacer" data-offset-top="1018" data-content-above-spacer="1018" data-content-below-spacer="62" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="clearfix grpelem" id="pu2778"><!-- column -->
+    <div class="clearfix colelem" id="u2778"><!-- group -->
+     <div class="grpelem" id="u3387"><!-- simple frame --></div>
+    </div>
+    <a class="nonblock nontext clip_frame colelem" id="u2845" href="contact.html"><!-- svg --><img class="svg" id="u2846" src="images/svg-49288x652.svg?crc=3802422103" alt="" data-mu-svgfallback="images/svg%2049288x652_poster_.png?crc=3776679386" data-heightwidthratio="1.3257575757575757" data-image-width="132" data-image-height="175"/></a>
+   </div>
+   <div class="verticalspacer" data-offset-top="961" data-content-above-spacer="961" data-content-below-spacer="118" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -129,11 +226,13 @@ var suppressMissingFileError = false
 l[1]:null,l=l&&l[2]?l[2]:null;switch(l.toLowerCase()){case "css":k=k.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");f.className+=" "+k;k=a(c(f,"color"));l=a(c(f,"backgroundColor"));k!=0||l!=0?(Muse.assets.required.splice(h,1),"undefined"!=typeof b[i]&&(k!=b[i]>>>24||l!=(b[i]&16777215))&&Muse.assets.outOfDate.push(i)):h++;f.className="version";break;case "js":h++;break;default:throw Error("Unsupported file type: "+l);}}d?d().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 f.parentNode.removeChild(f);if(Muse.assets.outOfDate.length||Muse.assets.required.length)f="Einige der Dateien auf dem Server fehlen oder sind ungültig. Löschen Sie den Browser-Cache und versuchen Sie es erneut. Wenn das Problem weiterhin besteht, wenden Sie sich an den Autor der Website.",g&&Muse.assets.outOfDate.length&&(f+="\nOut of date: "+Muse.assets.outOfDate.join(",")),g&&Muse.assets.required.length&&(f+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(f+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(f)):alert(f)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){g(!0)},5E3):g()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(d){var $ = d;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","webpro","musewpslideshow","jquery.museoverlay","touchswipe"],function(d){var $ = d;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.popup_anchor.allow_click_through');/* resize height */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
+Muse.Utils.initWidget('#slideshowu1811', ['#bp_infinity'], function(elem) { var widget = new WebPro.Widget.ContentSlideShow(elem, {autoPlay:false,displayInterval:3500,slideLinkStopsSlideShow:false,transitionStyle:'fading',lightboxEnabled_runtime:false,shuffle:false,transitionDuration:500,enableSwipe:true,elastic:'off',resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false,isResponsive:true}); $(elem).data('widget', widget); return widget; });/* #slideshowu1811 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
